# timekill

./: .buildinfo  .gitignore  Makefile  README.md  about.html  api.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage.html
.github/workflows/: build.yml  docs.yml
_sources/: index.rst.txt  installation.rst.txt
docs/: about.rst  api.rst  conf.py  index.rst  installation.rst  usage.rst
src/timekill/: __init__.py  __main__.py  emoji.py  main.py  models.py  motivation.py  notify.py  server.py
src/timekill/classify/: __init__.py  gpt3.py
src/timekill/load/: __init__.py  reddit.py
src/timekill/suggest/: __init__.py  activities.py  context.py  models.py  schedule.py  suggest.py
src/timekill/test/: test_classify.py  test_load.py
