[tool.poetry]
name = "timekill"
version = "0.1.0"
description = "A better way to kill time"
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
readme = "README.md"
packages = [
    { include = "timekill", from = "src" },
]

[tool.poetry.scripts]
timekill = "timekill.main:main"

[tool.poetry.dependencies]
python = "^3.10,<3.12"

fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}

pandas = "^1.5.0"
requests = "^2.28.1"
click = "^8.1.3"
joblib = "^1.2.0"

openai = "^0.23.1"
praw = "^7.6.0"
desktop-notifier = "^3.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pyupgrade = "^3.1.0"
black = "^22.10.0"
mypy = "*"
types-requests = "^2.28.11.2"
pyinstaller = "^5.5"

[tool.pytest.ini_options]
markers = [
    "reddit: uses the reddit API",
    "openai: uses the OpenAI API",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
